syntax = "proto3";

option java_multiple_files = true;
option java_package = "ssd";
option java_outer_classname = "Public_Ledger_For_Auctions";

service FindNodeService {
  rpc FindN (FindNodeRequest) returns (stream NodeReply);
}

message FindNodeRequest {
  string node_id = 1;
}

message NodeReply {
  string ip_addr = 1;
  int32 udp_port = 2;
  string node_id = 3;
}