syntax = "proto3";
package ssd;

option java_multiple_files = true;

service PingService {
  rpc Ping (PingRequest) returns (NodeInfo);
}

message PingRequest {
  string id = 1;
  NodeInfo sender = 2;
}

message NodeInfo {
  string nodeid = 1;
  string ip = 2;
  string port = 3;
}