syntax = "proto3";

option java_multiple_files = true;
option java_package = "ssd";
option java_outer_classname = "Public_Ledger_For_Auctions";

service StoreService {
  rpc StoreVal(StoreValue) returns (StoreReply);
}

message StoreValue {
  string hash_node = 1;
  string value = 2;
  string ip  = 3;
  int32 port = 4;
}

message StoreReply {
  string reply = 1;
}

